# matching-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: cppNotes.md
include/: Book.h  CurrentTime.h  Order.h  utils.h
matching-engine/: CMakeLists.txt  setup.py
matching-engine-exe/: CMakeLists.txt
matching-engine-exe/src/: main.cpp
matching-engine/external_include/sbepp-gen/engine_schemas/: engine_schemas.hpp
matching-engine/external_include/sbepp-gen/engine_schemas/messages/: order_schema.hpp  trade_schema.hpp
matching-engine/external_include/sbepp-gen/engine_schemas/schema/: schema.hpp
matching-engine/external_include/sbepp-gen/engine_schemas/types/: MessageType.hpp  OrderStatus.hpp  OrderType.hpp  STRING16.hpp  STRING20.hpp  STRING36.hpp  STRING4.hpp  Side.hpp  UINT32.hpp  UINT64.hpp  VARSTRING8.hpp  messageHeader.hpp
matching-engine/include/: Book.hpp  CurrentTime.hpp  Engine.hpp  Event.hpp  Logger.hpp  Order.h  Order.hpp  Stringification.hpp  ThreadPool.hpp  decode.hpp  encode.hpp  event.hpp  utils.hpp
matching-engine/sbe/: engine_schemas.xml
matching-engine/src/: Book.cpp  Engine.cpp  Event.cpp  Logger.cpp  Order.cpp  PyBinder.cpp  event.cpp  utils.cpp
src/: Book.cpp  Logger.cpp  Order.cpp  main.cpp  utils.cpp
